# network-automation-tools

./: README.md
01-VM-Devices-setup/: README.md
01-VM-Devices-setup/files/bootstrap/: R2.xml
01-VM-Devices-setup/files/configs/: R1_base.txt  R1_telemetry_config.txt  R2_base.txt  R2_telemetry_config.txt
02-Nautobot-setup/: README.md  docker-compose.yml
02-Nautobot-setup/nautobot/: Dockerfile  docker-compose.yml  local.env  nautobot_config.py  plugin_requirements.txt  populate_data.py  pyproject.toml
02-Nautobot-setup/nautobot/pkg/custom_napalm/: pyproject.toml
02-Nautobot-setup/nautobot/pkg/onboarding_extensions/: pyproject.toml
03-Nautobot-devices-onboarding/: README.md
04-Nautobot-network-importer/: README.md  docker-compose.yml
04-Nautobot-network-importer/network_importer/: Dockerfile  local.env  network_importer.toml  pyproject.toml
05-Nautobot-custom-plugin-installation/: README.md  docker-compose.yml  tasks.py
05-Nautobot-custom-plugin-installation/nautobot/: Dockerfile  docker-compose.yml  local.env  nautobot_config.py  plugin_requirements.txt  pyproject.toml
05-Nautobot-custom-plugin-installation/nautobot/pkg/custom_napalm/custom_napalm/: custom_eos.py
05-Nautobot-custom-plugin-installation/nautobot/pkg/onboarding_extensions/onboarding_extensions/: custom_eos.py
06-GNMI-gateway/: README.md  docker-compose.yml
06-GNMI-gateway/gnmi-gateway/: Dockerfile  targets.json
07-GNMI-gateway-and-Nautobot/: README.md  docker-compose.yml
07-GNMI-gateway-and-Nautobot/gnmi-gateway/: Dockerfile  local.env  targets.json
08-Telegraf-setup/: README.md  docker-compose.yml
08-Telegraf-setup/prometheus/: prometheus.yml
08-Telegraf-setup/telegraf/: telegraf.conf
09-Telegraf-and-Grafana/: README.md  docker-compose.yml
09-Telegraf-and-Grafana/grafana/provisioning/dashboards/: system.json
09-Telegraf-and-Grafana/telegraf/: telegraf.conf
10-AWX-setup/: README.md
11-Alertmanager/: README.md
11-Alertmanager/alertmanager/: config.yml
11-Alertmanager/prometheus/: alerts.yml  prometheus.yml
11-Alertmanager/telegraf/: telegraf.conf
