[tool.poetry]
name = "nautobot-setup"
version = "0.1.0"
description = "test"
authors = ["Michal Spiez <mspiez@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"


[tool.poetry.dependencies]
python = "3.9.19"
#nautobot = "2.2.7"

[tool.poetry.group.apps.dependencies]
python = "3.9"
nautobot-device-onboarding = "3.0.1"
nautobot-capacity-metrics = "3.0.1"
nautobot-golden-config = "2.0.1"
nautobot-ssot = "2.2.0"
nautobot-device-lifecycle-mgmt = "2.1.1"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
