[tool.poetry]
name = "network-importer"
version = "3.1.1"
description = "Network Importer tool to import an existing network into a Database / Source Of Truth"
authors = ["Michal Spiez <mspiez@gmail.com>"]
homepage = "https://github.com/mspiez/network-importer"
repository = "https://github.com/mspiez/network-importer"
keywords = ["network", "source-of-truth", "netbox", "diffsync"]
license = "Apache-2.0"

packages = [
    { include = "network_importer" },
]

[tool.poetry.dependencies]
python = "^3.8.0"
pynetbox = ">=5.0,<8.0"
toml = "^0.10"
nornir = "^3.0"
termcolor = ">=1.1,<3"
click = "^7.1 || ^8.0"
pydantic = "^1.6"
genie = ">=22.7,<24"
pyats = ">=22.7,<24"
netmiko = "^3.3"
ntc-templates = ">=2.0,<4"
structlog = ">=20.1.0,<24"
diffsync = "^1.2"
rich = ">=9.2"
pynautobot = ">=2.0.0"
nornir-napalm = "^0.1.2"
nornir-utils = "^0.1.2"
nornir-netmiko = "^0.1.1"
pybatfish = "2023.5.12.784"


[tool.poetry.scripts]
network-importer = 'network_importer.cli:main'


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
