[tool.poetry]
name = "custom-napalm"
version = "0.1.0"
description = "custom napalm"
authors = ["Michal Spiez <mspiez@gmail.com>"]
license = "Apache-2.0"
packages = [
    { include = "custom_napalm" }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
